<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="fr.pkshetlie.carnetdepeche.PartiePecheForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:alpha="0.75"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/date_debut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="#ffffff"
            android:hint="@string/date_debut" />

        <Button
            android:id="@+id/heure_debut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="#ffffff"
            android:hint="00:00"
            android:text="@string/heure_debut" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/date_fin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="#ffffff"
            android:hint="@string/date_fin" />

        <Button
            android:id="@+id/heure_fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="#ffffff"
            android:hint="00:00"
            android:text="@string/heure_fin" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/select_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:background="#ffffff"
        android:hint="@string/select_type" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/select_eau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:background="#ffffff"
        android:hint="@string/select_eau" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:alpha="0.75"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/comment" />


</LinearLayout>
